# aoc-2025

./: .gitignore  .gitmodules  Cargo.toml  aoc.cabal  flake.nix
app/: Main.hs
haskell/: LICENSE  Main.hs  Pre.hs  Prelude.hs  Puzzle.hs  aoc.cabal
haskell/Puzzles/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
haskell/src/: Main.hs  Prelude.hs
haskell/src/Puzzles/: Day1.hs  Day2.hs  Day4.hs  Day5.hs
haskell/util/: MyPrelude.hs
nix/: hix.nix
outputs/examples/4/extra/frames/: 1  2  3  4  5  6  7  8  9
outputs/real/2/: 1  2
outputs/real/3/: 2
outputs/real/4/extra/frames/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+19 more)
outputs/real/5/: 2
outputs/real/6/: 1  2
outputs/real/7/: 2
outputs/real/8/: 2
outputs/real/9/: 1  2
rust/: Cargo.toml  main.rs  puzzle.rs
rust/puzzles/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
