cabal-version: 3.0
name: aoc
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

executable aoc
    main-is: Main.hs
    hs-source-dirs: app
    default-language: GHC2024
    default-extensions:
        BlockArguments
        MultiWayIf
        ViewPatterns
    ghc-options:
        -Wall
    build-depends:
        base >= 4.14,
        async,
        base,
        binary,
        bytestring,
        colour,
        containers,
        directory,
        exceptions,
        extra,
        filepath,
        megaparsec,
        mtl,
        pretty-simple,
        safe,
        stm,
        text,
        time,
        transformers,
