cabal-version: 3.0
name: aoc
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

executable aoc
    main-is: Main.hs
    hs-source-dirs: .
    other-modules:
        Puzzle
        Puzzles.Day1
        Puzzles.Day2
        Puzzles.Day3
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DuplicateRecordFields
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NegativeLiterals
        NoFieldSelectors
        NoMonomorphismRestriction
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        ViewPatterns
    ghc-options:
        -Wall
        -fdefer-type-errors
    build-depends:
        base >= 4.14,
        async,
        base,
        binary,
        bytestring,
        colour,
        containers,
        deepseq,
        directory,
        exceptions,
        extra,
        filepath,
        megaparsec,
        monad-loops,
        mtl,
        pretty-simple,
        safe,
        stm,
        tasty-golden,
        tasty-hunit,
        tasty,
        text,
        time,
        transformers,
