cabal-version: 3.0
name: aoc
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

executable aoc
    main-is: Main.hs
    hs-source-dirs: .
    other-modules:
        Pre
        Puzzles.Day1
        Puzzles.Day2
        Puzzles.Day3
        Puzzles.Day4
        Puzzles.Day5
        Puzzles.Day6
        Puzzles.Day7
        Puzzles.Day8
        Puzzles.Day9
        Puzzles.Day10
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DuplicateRecordFields
        ImpredicativeTypes
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NegativeLiterals
        NoFieldSelectors
        NoImplicitPrelude
        NoMonomorphismRestriction
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        ViewPatterns
    ghc-options:
        -Wall
        -fdefer-type-errors
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        base >= 4.14,
        async,
        binary,
        bytestring,
        colour,
        containers,
        deepseq,
        directory,
        disjoint-containers,
        exceptions,
        extra,
        filepath,
        finite-typelits,
        lens,
        linear,
        massiv,
        megaparsec,
        monad-loops,
        mtl,
        pretty-simple,
        safe,
        stm,
        streams,
        text,
        time,
        transformers,
